Dark mode fixed?

--- a/MainPage.css
+++ b/MainPage.css
@@ -47,14 +47,17 @@ a:hover {
 }
 
 body.dark-mode {
-    background-color: #121212;
+    background-color: #3d3d3d;
     color: #ffffff;
 }
 
 header.dark-mode {
-    background-color: #1e1e1e;
+    background-color: #3d3d3d;
 }
 
 a.dark-mode {
     color: #00bbff;
+}
+li.dark-mode {
+    background: #606060;
 }
